--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,8 +1,3 @@
-$color-red: #650300;
-$color-light-red: #9f1213;
-$color-lighter-red: #aa0601;
-$color-green: #00ffa3;
-
 a {
   text-decoration: none;
   color: #000;
@@ -29,6 +24,10 @@ body {
 }
 
 .text-light-red {
+  color: $color-light-red;
+}
+
+.text-lighter-red {
   color: $color-lighter-red;
 }
 
