--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,7 @@
 @import "_variable.scss";
 @import "_reset.scss";
 @import "_base.scss";
+@import "_utilities.scss";
 @import "./layout/header.scss";
 @import "./layout/footer.scss";
 
