--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Roboto", "Noto Sans TC", serif;
   line-height: 1.5;
 }
 
